clusters/apps/env/production/observability/grafana/ingressroute.grafana.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  annotations:
    kubernetes.io/ingress.class: "traefik-external"
    external-dns.alpha.kubernetes.io/target: ${DYNAMIC_DOMAIN}
    external-dns/public: "true"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`grafana.${SECRET_DOMAIN}`)"
      middlewares:
        # - name: ak-outpost-authentik-embedded-outpost
        #   namespace: auth-system
        - name: l5d-grafana-middleware
          namespace: observability
      services:
        - name: grafana
          port: 80
    # - kind: Rule
    #   match: "Host(`grafana.${SECRET_DOMAIN}`) && PathPrefix(`/outpost.goauthentik.io/`)"
    #   priority: 15
    #   services:
    #     - kind: Service
    #       name: ak-outpost-authentik-embedded-outpost
    #       namespace: auth-system
    #       port: 9000
    #   middlewares:
    #     - name: l5d-authentik-middleware
    #       namespace: auth-system
  tls:
    secretName: crj-wildcard-certificate
    domains:
      - main: grafana.${SECRET_DOMAIN}
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: l5d-grafana-middleware
spec:
  headers:
    customRequestHeaders:
      l5d-dst-override: "grafana.observability.svc.cluster.local:80"
